edit mobile alignment issues, ready for review cont.

--- a/styles.scss
+++ b/styles.scss
@@ -41,9 +41,9 @@ html {
 }
 
 body {
-    width: 95vw;
+    width: 98vw;
     height: 100%;
-    padding-left: 2.5vw;
+    // padding-left: 2.5vw;
     // padding-right: 2.5vw;
 }
 
@@ -59,10 +59,8 @@ header {
         // filter:invert(1);
     }
 }
-
-
-
-@media screen and (min-width:1200px) {
+// desktop setup row 2
+@media screen and (min-width:900px) {
     
     .row_2{
         @include content_settup();
@@ -87,8 +85,8 @@ header {
         }
     }
 }
-
-@media screen and (max-width:1200px) {
+// mobile setup row 2
+@media screen and (max-width:900px) {
     
     .row_2{
         @include content_settup();
@@ -96,6 +94,7 @@ header {
         grid-template-columns: 100%;
         grid-template-rows:60vh auto;
         justify-self: center;
+        justify-content: center;
         
         .text {
             grid-column: 1;
@@ -145,11 +144,12 @@ header {
             @include debug($bg_color:$debug_color_3);
             min-width: 300px;
             width: 20vw;
-            height: 30vh;
-
+            height: auto;
+            
             img {
                 width: 100%;
-                height: 100%;
+                height: auto;
+                overflow: hidden;
                 filter: grayscale(100%);
             }
         }
@@ -213,16 +213,16 @@ header {
     display: flex;
     justify-content: center;
     background-color: black;
-
-    @media screen and (min-width:1200px){
+    // desktop 
+    @media screen and (min-width:900px){
         img {
             height:80vh;
             width: auto;
             filter: grayscale(100%);
         }   
     }
-
-    @media screen and (max-width:1200px){
+    // mobile
+    @media screen and (max-width:900px){
         img {
             height:auto;
             width: 100%;
